# SpoonFeeder

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .harnessignore  .pnp.cjs  .yarnrc.yml  BUILD.md  CLAUDE.md  Dockerfile  Makefile  README  README.md  Step Action Why It Works.md  build.sh  capacitor.config.ts  cypress.config.cjs  cypress.config.ts  dashboard.html  docker.sh  eslint.config.js  explanation.adoc  global.d.ts  gulpfile.js  index.html  jest.config.js  knip.json  nightwatch.conf.js  package.json  pyproject.toml  quasar.config.cjs  quasar.config.js  quasar.extensions.json  refresh.sh  requirements.txt  results.txt  stryker.config.mjs  test.html  tsconfig.json  tsconfig.typecheck.json  (+2 more)
analysis/: dependency-cruiser.config.cjs
docs/: PRD.md  REGISTRY.md  RUN.md  STATUS.md  ai.bugfix.gap-analysis.spoonfeeder.md  ai.bugfix.gap-report.spoonfeeder.md  ai.bugfix.interfaces.spoonfeeder.md  ai.bugfix.migration.spoonfeeder.md  ai.bugfix.prd.spoonfeeder.md  ai.bugfix.security.spoonfeeder.md  ai.bugfix.tasks.spoonfeeder.md  games.md  healy.gamification.md  prd.gamification.md  prd.section1.quasar-conversion.md  review.prd.md  tasks.section1.quasar-conversion.md
js/: README
lib/: CSSRulePlugin.min.js  CustomEase.min.js  Draggable.min.js  EasePack.min.js  EaselPlugin.min.js  Flip.min.js  Observer.min.js  PixiPlugin.min.js  README  ScrollToPlugin.min.js  ScrollTrigger.min.js  TextPlugin.min.js  test.html
public/: courses
resources/: SPOONY_REQUIREMENTS.md  features.md  spoony.req.md
scripts/: ai-patch-validate.ts  boolean-cluster-scanner.ts  infra-audit.ts  (+5 more)
(+705 files in other folders)
