[project]
name = "spoonfeeder-app"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pip-audit>=2.9",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-json-report>=1.5",
    "radon>=6.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 0
